@@ -152,7 +152,7 @@ USB_Descriptor_Configuration_t ConfigurationDescriptor =
  */
 uint16_t CALLBACK_USB_GetDescriptor(const uint16_t wValue, const uint8_t wIndex, void** const DescriptorAddress)
 {
-	const uint8_t  DescriptorType   = (wValue >> 8);
+	const uint8_t DescriptorType = (wValue >> 8);
 
 	void*    Address = NULL;
 	uint16_t Size    = NO_DESCRIPTOR;
