@@ -56,7 +56,13 @@
 		#endif
 
 	/* Defines: */
-		#define TINY_NVM_BUSY_TIMEOUT_MS       100
+		#define TINY_NVM_REG_NVMCSR            0x32
+		#define TINY_NVM_REG_NVMCMD            0x33
+
+		#define TINY_NVM_CMD_NOOP              0x00
+		#define TINY_NVM_CMD_CHIPERASE         0x10
+		#define TINY_NVM_CMD_SECTIONERASE      0x14
+		#define TINY_NVM_CMD_WORDWRITE         0x1D
 
 	/* Function Prototypes: */
 		bool TINYNVM_WaitWhileNVMBusBusy(void);
