@@ -10,8 +10,11 @@
   *
   *  <b>New:</b>
   *  - Added TPI programming support for 6-pin ATTINY to the AVRISP programmer project
+  *  - Added command timeout counter to the AVRISP project so that the device no longer freezes when incorrectly connected
+  *    to a target
   *
   *  <b>Changed:</b>
+  *  - Slowed down bit-banged PDI programming in the AVRISP project slightly to prevent transmission errors
   *
   *  <b>Fixed:</b>
   *
